Fixed alignment and progress of steps of Disk Benchmark

--- a/Universe.W3Top/ClientApp/src/App.css
+++ b/Universe.W3Top/ClientApp/src/App.css
@@ -63,7 +63,7 @@ table.benchmark-progress td {
 }
 
 table.benchmark-progress td.step-duration, table.benchmark-progress td.step-speed  {
-    min-width: 100px;
+    min-width: 108px;
     text-align: right;
 }
 
